@startuml ER

class Agreement {
    * id: int primary key
    * name: varchar()
    * description: text
    --
}

class CityDepartment {
    * id: int primary key
    * name: varchar()
    * description: text
    --
}

class MinistryDepartment {
    * id: int primary key
    * name: varchar()
    * description: text
    --
}

class Address {
    class Agreement {
    * id: int primary key
    * street: varchar()
    * number: int
    --
}

class UserStatus {
    * id: int primary key
    * name: varchar()
    * description: text
    --
}

class VisitStatus {
    * id: int primary key
    * name: varchar()
    * description: text
    --
}

class Faq {
    * id: int primary key
    * name: varchar()
    * minstry_department: int (foreign key)
    --
}

class Why {
    * id: int primary key
    * name: varchar()
}

class Mayor {
    * id: int primary key
    * first_name: varchar()
    * last_name: varchar()
    --
}

class Location {
    * id: int primary key
    * name: varchar()
    * department: int (foreign key)
    --
}

class VehicleBrand {
    * id: int primary key
    * name: varchar()
    --
}

class VehicleModel {
    * id: int primary key
    * name: varchar()
    * brand: int (foreign key)
    --
}

class VehiclePlate {
    * id: int primary key
    * plate: varchar()
    --
}

class Vehicle {
    * id: int primary key
    * plate: int (foreign key)
    * brand: int (foreign key)
    * model: int (foreign key)
    --
}

class PoliticParty {
    * id: int primary key
    * name: varchar()
    * description: text
    --
}

class Role {
    * id: int primary key
    * name: varchar()
    * description: text
    --
}

class ContactedReferrer {
    * id: int primary key
    * first_name: varchar()
    * last_name: varchar()
    --
}

class UserAccount {
    * id: int primary key
    * ssn: int unique
    * last_login: timestamp
    * email: varchar()
    * first_name: varchar()
    * last_name: varchar()
    * is_staff: bool
    * is_active: bool
    * is_superuser: bool
    * phone_number: bigint
    * profile_picture: bytea
    * role: int (foreign key)
    * user_status: int (foreign key)
    --
}

class Group {
    * id: int primary key
    * name: varchar()
    --
}

class Visit {
    * id: int primary key
    * location: int (foreign key)
    * start_time: timestamp
    * finish_time: timestamp
    * flyer: bool
    * finance_collaborator: int (foreign key)
    * rent_collaborator: int (foreign key)
    * rent_observations: text
    * distance: int
    * travel_time: timestamp
    * civil_registration: bool
    * place_name: varchar()
    * address: int (foreign key)
    * contacted_referrer: int (foreign key)
    * accommodation: bool
    * politic_party: int (foreign key)
    * mayor: int (foreign key)
    * agreement: int (foreign key)
    * modernization_fund: bool
    * visit_status: int (foreign key)
    * group: int (foreign key)
    --
}

class RequestStatus {
    * id: int primary key
    * name: varchar()
    * description: text
    --
}

class Coordinator {
    * id: int primary key
    * user: int (foreign key)
    * group: int (foreign key)
    --
}

class Advisor {
    * id: int primary key
    * user: int (foreign key)
    * group: int (foreign key)
    --
}

class Request {
    * id: int primary key
    * visit: int (foreign key)
    * ministry_department: int (foreign key)
    * faq: int (foreign key)
    * why: int (foreign key)
    * advisor: int (foreign key)
    * status: int (foreign key)
    --
}

class ContactedReferrerEmail {
    * id: int primary key
    * mail: varchar()
    * contacted_referrer: int (foreign key)
    --
}

class ContactedReferrerPhone {
    * id: int primary key
    * phone_number: bigint
    * contacted_referrer: int (foreign key)
    --
}

class MayorEmail {
    * id: int primary key
    * mail: varchar()
    * mayor: int (foreign key)
    --
}

class MayorPhone {
    * id: int primary key
    * phone_number: bigint
    * mayor: int (foreign key)
    --
}



UserAccount ||--o{ UserStatus
UserAccount ||--o{ Role

Location }|--|| CityDepartment

Advisor -- UserAccount
Coordinator -- UserAccount

Group |o--o{ Advisor
Group }o--|{ Coordinator

Visit }o--|| Location
Visit }o--o{ FinanceCollaborator
Visit }o--o{ RentCollaborator
Visit }|--|| Address
Visit }|--o{ ContactedReferrer
Visit }o--|| PoliticParty 
Visit }o--|| Mayor
Visit }o--|| VisitStatus
Visit }o--|| Group
Visit }o--o{ Agreement

Request }o--|| Visit
Request }o--|| Faq
Request }o--|| Why
Request }o--|| Advisor
Request }o--|| RequestStatus

Faq }|--|| MinistryDepartment

Vehicle }|--|| VehicleBrand
Vehicle }|--|| VehicleModel
Vehicle ||--|| VehiclePlate
VehicleModel }|--|| VehicleBrand

Mayor ||--|{ MayorEmail
Mayor ||--|{ MayorPhone

ContactedReferrer ||--|{ ContactedReferrerEmail
ContactedReferrer ||--|{ ContactedReferrerPhone

@enduml
